# epistemic-confidence-layer

./: # THE EPISTEMIC CONFIDENCE LAYER.gdoc  #L01f9ed White Paper- The Epistemic Confidence Layer.gdoc  .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  ECL_collaboration_appendix.md  ECL_notes_to_editors.md  ECL_one_pager.md  ECL_white_paper.md  FOUNDATION.md  LICENSE  Makefile  README (2).md  README.md  ROADMAP.md  SECURITY.md  The Epistemic Confidence Layer (ECL)  A Trust Protocol for AI  .gdoc  Upgrade.json  UpgradePack.sig  bots-patch  copy_manifest.json  docker-compose.yml  folder_unification_report.json  follow_ups.patch  mkdocs.yml  pr-diffs  pre-commit-config.yaml  providers_similarity_calibration.patch  pyproject.toml  requirements-dev.txt  requirements.txt  router_providers_patch.diff  unification_backup_pointer.json  unification_operation_summary.json  v0_2_feature_bundle.patch  v0_2_providers_cache_smoke.patch  v0_2_skeleton.patch  (+1 more)
.devcontainer/: devcontainer.json
.ecl_cache/: anthropicadapter-afb866c3880f826ef03865229ae1383272420d6e79b1ab8214981ef32eb0d518.json  anthropicadapter-e494a85146d01c4c3bf3cbfba7f52499589adac8e71ef54b89c3fd26c01d72e6.json  openaiadapter-391fac1b9fed1230a0c34c4f3247ae4e3a923cd4907704a1f693413944219ef2.json  openaiadapter-96c5ff0a74d33fef8f154e8ccade4cc0f5d90e936e007b34c8008fcf0ac2b2a1.json
.github/: CODEOWNERS  FUNDING.yml  labeler.yml  pull_request_template.md  release-drafter.yml
.vercel/: project.json
api_samples/: requests.http
benchmarks/: AUTOMATION_ROADMAP.md
claude-ECL-data-extraction/: AI conversation data extraction_e22aa179.md  AI operating system with delegative workflow_76e5ee10.md  Codessian AI operating system architecture_19efe5cc.md  Codessian systems atlas_ living index_bb884fcc.md  Conversation export and memory_e49e9f0c.md  Delegative AI operating system design_c1a5da80.md  Epistemic confidence layer research_99ff7d85.md  Google Drive strategy document review_fcb4db68.md  Personal brilliance visualization_1fe8b791.md  Semantic memory architecture for AI_f7aef9d4.md  The epistemic confidence layer for AI trust_001146e7.md
docs/: 90_Day_Sprint_Plan.md  Ambassadors_Manifesto_Phoenix.md  ECL_Genesis_Document.md  api.md  architecture.md  bots.md  calibration.md  governance.md  installation.md  operations.md  overview.md  similarity-calibration.md  troubleshooting.md  tutorial.md
examples/: api_minimal.py  calibration_demo.py  hello.py  requests.http
figures/: figure1_pipeline.mmd  figure2_consensus_heatmap.mmd  figure3_reliability_diagram_example.csv  figure4_contradiction_graph.mmd  figure5_governance_flow.mmd
src/: cache.py  (+5 more)
(+96 files in other folders)
