[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epistemic-confidence-layer"
version = "0.0.1"
description = "A toolkit for quantifying and communicating epistemic confidence in AI."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Community" }]
keywords = ["confidence", "calibration", "uncertainty", "ai", "ml"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/codessian/epistemic-confidence-layer"
Issues = "https://github.com/codessian/epistemic-confidence-layer/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q --maxfail=1 --disable-warnings --cov=src --cov-report=term-missing"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
  ".git",
  ".venv",
  "__pycache__",
  ".github/scripts",
  "scripts",
  "benchmarks",
]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E401", "E402", "E501", "E701", "E702"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true
exclude = "(^scripts/|^benchmarks/|^\\.github/)"
check_untyped_defs = true
disable_error_code = ["import-untyped", "import-not-found", "misc", "assignment", "attr-defined", "arg-type", "override", "annotation-unchecked"]
